--- a/custom/themes/magnetics/src/sass/typography/_custom.scss
+++ b/custom/themes/magnetics/src/sass/typography/_custom.scss
@@ -37,6 +37,6 @@ a[href$="product-integrations/rov/"], a[href$="product-integrations/auv/"] {
     color: $gray;
 }
 
-label.wireless-gnss span {
-    background-color: #00568d;
-}
+// label.wireless-gnss span {
+//     background-color: #00568d;
+// }
